@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.14 2004/06/28 13:58:25 minskim Exp $
+# $NetBSD: Makefile,v 1.15 2004/07/04 16:38:47 minskim Exp $
 #
 
-DISTNAME=		mathomatic-11.2d
+DISTNAME=		mathomatic-11.2e
 CATEGORIES=		math
 MASTER_SITES=		http://www.panix.com/~gesslein/
 EXTRACT_SUFX=		.tgz
@@ -24,8 +24,8 @@ INSTALLATION_DIRS=	bin man/man1
 .include "../../devel/readline/buildlink3.mk"
 
 do-install:
-	${INSTALL_PROGRAM} ${WRKSRC}/am ${PREFIX}/bin/am_mathomatic
-	${INSTALL_MAN} ${WRKSRC}/am.1 ${PREFIX}/man/man1/am_mathomatic.1
+	${INSTALL_PROGRAM} ${WRKSRC}/mathomatic ${PREFIX}/bin
+	${INSTALL_MAN} ${WRKSRC}/mathomatic.1 ${PREFIX}/man/man1
 	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/${PKGBASE}
 	${INSTALL_DATA} ${WRKSRC}/*.htm ${WRKSRC}/readme.txt	\
 		${PREFIX}/share/doc/${PKGBASE}
